--- a/Assignment/A1/index.html
+++ b/Assignment/A1/index.html
@@ -66,7 +66,7 @@
         </div>
     </footer>
     
-    <script src="/framework/js/vue.global.js"></script>
+    <script src="/main/Assignment/framework/js/vue.global.js"></script>
     <script>
         const { createApp } = Vue;
         createApp({
