--- a/Assignment/A1/index.html
+++ b/Assignment/A1/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Phan Hung Nguyen">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Event Management System</title>
-    <link rel="stylesheet" href="/framework/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../framework/css/bootstrap.min.css">
     <style>
         .navbar-brand{
             font-size: 1.8rem !important;
@@ -66,7 +66,7 @@
         </div>
     </footer>
     
-    <script src="/main/Assignment/framework/js/vue.global.js"></script>
+    <script src="../framework/js/vue.global.js"></script>
     <script>
         const { createApp } = Vue;
         createApp({
